--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <body>
   <div class="container">
     <h1><img src="images/note.png">Notes</h1>
-    <button><img src="images/edit-text.png">Create Notes</button>
+    <button class="btn"><img src="images/edit-text.png">Create Notes</button>
     <div class="notes-container">
-      <p contenteditable="true" class="input-box">
+      <!--<p contenteditable="true" class="input-box">
         <img src="images/delete.png">
-      </p>
+      </p>-->
     </div>
   </div>
   <script src="index.js"></script>
